# nova-physics

./: .gitignore  BUILDING.md  CONTRIBUTING.md  LICENSE  README.md  build.py  meson.build  meson.options  nova_builder.py  wasm.ini
.github/workflows/: build.yml
benchmarks/: README.md  ball_pool.c  balls.c  benchmark_base.h  boxes.c  main.c  mixed.c  mixer.c  pyramid.c
benchmarks/scenes/: scene_pyramid.h
docs/: Doxyfile  README.md  body.md  collision.md  conf.py  index.rst  installing.rst  overview.md  requirements.txt  space.md  space.rst
docs/_static/: credits
docs/getting_started/: helloworld.rst  index.rst  units.rst
docs/reference/: aabb.rst  array.rst  body.rst  collision.rst  constraint.rst  contact.rst  errors.rst  index.rst  material.rst  resolution.rst  rigidbody.rst  shape.rst  space.rst  vector2.rst
docs/reference/constraints/: distance_constraint.rst  hinge_constraint.rst  index.rst  spline_constraint.rst
docs/translations/: README_tr.md
examples/: README.md  arch.c  arch.h  bridge.c  bridge.h  chains.c  chains.h  circle_stack.c  circle_stack.h  clock.h  cloth.c  cloth.h  common.h  constraints.c  constraints.h  domino.c  domino.h  example.c  example.h  example_base.h  float_error.c  fountain.c  fountain.h  hull.c  hull.h  main.c  mould_effect.c  newtons_cradle.c  newtons_cradle.h  ngl.h  orbit.c  orbit.h  pool.c  pool.h  pyramid.c  pyramid.h  ragdolls.h  run_example.py  spring_car.c  spring_car.h  (+9 more)
examples/benchmarks/: bench_boxes.c  bench_pool_big.c  bench_pool_small.c  benchmark_base.h  benchmarks.md
examples/demos/: bouncing.h  compound.h  constraints.h  demo_contact_event.h  demo_createdestroy.h  demo_damping.h  demo_density.h  demo_distance_constraint.h  demo_friction.h  demo_hinge_constraint.h  demo_pyramid.h  demo_raycast.h  demo_rocks.h  demo_shape_pit.h  demo_softbody.h  demo_spline_constraint.h  demo_spring_grid.h  demo_stack.h  demo_tiles.h  hinge_constraint.h  pyramid.h  softbody.h  stack.h
include/novaphysics/: aabb.h  array.h  body.h  broadphase.h  bvh.h  collision.h  constants.h  constraint.h  contact.h  contact_solver.h  debug.h  distance_joint.h  error.h  hashmap.h  hinge_joint.h  internal.h  material.h  math.h  matrix.h  narrowphase.h  novaphysics.h  profiler.h  resolution.h  shape.h  shg.h  simd.h  solver.h  space.h  space_settings.h  space_step.h  spring.h  threading.h  types.h  vector.h  version.h
include/novaphysics/constraints/: constraint.h  contact_constraint.h  distance_constraint.h  hinge_constraint.h  spline_constraint.h
include/novaphysics/core/: array.h  error.h  hashmap.h  pool.h
python-binding/: nova.pyi  py_body.h  py_nova.c  py_space.h  py_vector2.h  python_binding.c  setup.py  utils.h
scripts/: copy_assets.py  install_wraps.py
src/: array.c  body.c  broadphase.c  bvh.c  collision.c  constraint.c  contact.c  contact_old.c  contact_solver.c  distance_joint.c  error.c  hashmap.c  hinge_joint.c  math.c  narrowphase.c  resolution.c  shape.c  shg.c  solver.c  space.c  space_step.c  spring.c  threading.c  vector.c  version.c
src/constraints/: constraint.c  contact_constraint.c  distance_constraint.c  hinge_constraint.c  spline_constraint.c
src/core/: array.c  error.c  hashmap.c  pool.c
tests/: main.c  run_tests.py  tests.c  unittest.h
